# oop_teacher

./: .gitignore  README.md  crewai_flow.html  oop_explanation.md  oop_simplified.md  pyproject.toml
src/oop_teacher/: main.py
src/oop_teacher/crews/oop_crew/: oop_crew.py
src/oop_teacher/crews/oop_crew/config/: agents.yaml  tasks.yaml
